--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#37474f</color>
     <color name="colorPrimaryDark">#263238</color>
-    <color name="colorAccent">#03A9F4</color>
+    <color name="colorAccent">#26A599</color>
     <color name="colorBtn">#59585a</color>
     <color name="colorBtnStroke">#ffffff</color>
 
