--- a/app/src/main/res/layout/fragment_throw.xml
+++ b/app/src/main/res/layout/fragment_throw.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_dark"
+    android:id="@+id/ThrowFrame"
     tools:context=".menu.ThrowFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -15,15 +15,14 @@
 
         <Button
             android:id="@+id/btn_start"
-            android:layout_width="314dp"
-            android:layout_height="54dp"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="420dp"
-            android:background="@color/colorBtn"
             android:text="@string/de_btn_start"
-            android:textColor="@android:color/white"
+            android:background="@drawable/btn_round"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
