--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -86,7 +86,7 @@
 
     <TextView
         android:id="@+id/register_txt"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:fontFamily="cursive"
         android:text="@string/Register_txt"
