--- a/app/src/main/res/layout/fragment_highscore.xml
+++ b/app/src/main/res/layout/fragment_highscore.xml
@@ -1,51 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:dividerHeight="10.0sp">
+    android:padding="8dip"
+    android:background="@color/colorThemeBackground">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="53dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="15dp"
+        app:srcCompat="@mipmap/ic_launcher_round" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/height"
+        android:layout_marginTop="11dp"
+        android:background="?android:attr/listDivider" />
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="157dp"
-        android:layout_height="61dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="name"
-        android:textAlignment="center" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/imageView"
+        android:layout_marginStart="101dp"
+        android:fontFamily="casual"
+        android:text=""
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
     <TextView
-
         android:id="@+id/score"
-        android:layout_width="73dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="score"
-        android:textAlignment="center"
-        android:textColor="@color/ic_logo_background"
-        android:textStyle="bold" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/name"
+        android:layout_below="@+id/name"
+        android:text=""
+        android:textColor="@color/textLightPrimary"
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/height"
-        android:layout_width="64dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="height"
-        android:textAlignment="center"
-        android:textColor="@android:color/holo_orange_dark"
-        android:textStyle="bold" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/name"
+        android:layout_below="@+id/score"
+        android:text=""
+        android:textColor="@color/textLightPrimary" />
 
-
-</LinearLayout>
-
+</RelativeLayout>
