--- a/app/src/main/res/layout/fragment_throw.xml
+++ b/app/src/main/res/layout/fragment_throw.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/ThrowFrame"
+    android:background="@color/colorThemeBackground"
     tools:context=".menu.ThrowFragment">
 
     <!-- TODO: Update blank fragment layout -->
